--- a/PurchaseSchedule/ClientApp/package.json
+++ b/PurchaseSchedule/ClientApp/package.json
@@ -21,7 +21,8 @@
     "msteams-ui-styles-core": "^0.7.3",
     "react-adal": "0.4.18",
     "typestyle": "^2.0.1",
-    "react-toggle-display": "2.2.0"
+    "react-toggle-display": "2.2.0",
+    "uuid": "3.3.2"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
